<resources>
    <string name="app_name">mojaram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recommendName">김미소님,</string>
    <string name="recommendSitu">스타일이 고민 될 때,</string>
    <string name="recommendHair">가상 헤어 체험 어때요?></string>
    <string name="search">지역, 매장, 스타일을 검색하세요</string>
    <string name="stylebook_tip">오늘의 스타일북 Tip</string>
    <string name="view_all">모두보기</string>
    <string name="nowhere">- 고데기? 드라이기? 가발에 사용해도 될까? 가발 스타···</string>
    <string name="cant">- 가발이 처음인 널 위해 착용법부터 관리법까지</string>
    <string name="summer">- 맞춤가발과 기성가발의 차이는 뭘까? 맞춤가발은···</string>
    <string name="home">홈</string>
    <string name="location">내주변</string>
    <string name="stylebook">매장목록</string>
    <string name="reservation">찜</string>
    <string name="me">마이</string>
    <string name="hairshop">맞춤가발샵</string>
    <string name="nailshop">남성통가발</string>
    <string name="oneshop">여성통가발</string>
    <string name="barbershop">남성부분가발</string>
    <string name="art">여성부분가발</string>
    <string name="welcomecoupon">웰컴쿠폰</string>
    <string name="sale">즉시할인</string>
    <string name="thismonth">이달의혜택</string>
    <string name="add">채널추가</string>
    <string name="tip">가발관리TIP</string>
    <string name="location_recommend">안양동 추천</string>
    <string name="style_recommend">스타일 추천</string>
    <string name="title_activity_vr_page">vrPage</string>
    <string name="likeshop">찜한 매장</string>
    <string name="likehair">찜한 스타일</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salon_recommendation">추천 매장</string>
    <string name="show_all_salons"><![CDATA[전체보기 >]]></string>
    <string name="do_ai_camera">AI 가상 헤어 체험 하기</string>
    <string name="take_picture">사진 촬영</string>
    <string name="select_picture">사진 선택</string>
    <string name="community">이벤트 공지</string>
    <string name="dummy_salon_info">양재역 8번 출구 바로 앞 살롱드라피네 양재역점입니다.\n\n100%정품 제품만을 사용하고 합리적인 가격으로 고객의 아름다움 뿐 아니라 고객의 건강한 두피/모발까지도 섬세하게 관리해드립니다.</string>

    <string name="hair_style">헤어스타일</string>
    <string name="dyeing">염색</string>
    <string name="on_image_uploading">사진을 업로드 하고 있어요.\n잠시만 기다려주세요!</string>

    <string-array name="selectreservetime">
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>
    <string name="title_activity_coupon_list">CouponListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>